--- a/quick-starts/db/postgres/Dockerfile
+++ b/quick-starts/db/postgres/Dockerfile
@@ -1,3 +1,9 @@
 FROM postgres:latest
+
+ENV POSTGRES_PASSWORD password
+
 WORKDIR /database/
+
 COPY sql/*.sql /docker-entrypoint-initdb.d/
+
+EXPOSE 5432:5432
